<resources>
    <string name="app_name">Talky</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="settings">Setting</string>
    <string name="login">Login</string>
    <string name="send_code">Send Code</string>
    <string name="verify">Verify</string>
    <string name="phone_number">Phone Number :</string>
    <string name="code">Verification Code :</string>
    <string name="phone_number_hint">Enter Phone Number</string>
    <string name="code_hint">Enter Code </string>
    <string name="phone_number_placeholder">+%s%s</string>
    <string name="error_phone_number">Enter Valid Phone Number</string>
    <string name="error_verification_code">Enter Valid Code or Try Again</string>
    <string name="change_phone_number">%s \n Change Number</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_name_hint">Enter User Name</string>
    <string name="profile">Profile</string>
    <string name="done">Done</string>
    <string name="image_url">gs://%s/images/%s</string>
    <string name="edit_profile">Profile</string>
    <string name="find_friends">Find Friends</string>
    <string name="send_message_hint">Send Message</string>
    <string name="send">Send</string>
    <string name="you">You</string>


</resources>