<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activities.LoginActivity"
    >

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login"
        android:textSize="65sp"
        android:textColor="#FFBF00"
        android:gravity="start"
        android:fontFamily="@font/insomia"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:layout_marginTop="20dp"
        />
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/ic__35_chat"
        app:layout_constraintStart_toEndOf="@id/loginText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintBottom_toTopOf="@id/phoneNumberLayout"
        />

    <LinearLayout
        android:id="@+id/phoneNumberLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            />
        <EditText
            android:id="@+id/phoneNumberText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:textColor="@android:color/darker_gray"
            android:hint="@string/phone_number_hint"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/phoneNumberChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:textColor="#4A66FF"
        android:gravity="center"
        android:textSize="15sp"
        android:visibility="gone"
        tools:text="123344545\nChange Number"
        />

    <LinearLayout
        android:id="@+id/codeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:orientation="vertical"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code"
            />
        <EditText
            android:id="@+id/codeText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/code_hint"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            />
    </LinearLayout>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/codeLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:text="@string/send_code"
        android:textColor="@android:color/white"
        android:background="@drawable/login_button_style_1"
        style="?android:borderlessButtonStyle"
        />


    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>